2010-03-06  Darin Fisher  <darin@chromium.org>

        Reviewed by David Levin.

        [Chromium] Embedder initiated loads should not always stop existing loads
        https://bugs.webkit.org/show_bug.cgi?id=33862

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::reload):
        (WebKit::WebFrameImpl::loadRequest):
        (WebKit::WebFrameImpl::loadHistoryItem):
        (WebKit::WebFrameImpl::loadData):

2010-03-06  Darin Fisher  <darin@chromium.org>

        Reviewed by David Levin.

        [Chromium] spurious WebViewClient::didStopLoading if changing
        location.hash while a subframe is still loading

        https://bugs.webkit.org/show_bug.cgi?id=33884

        * src/FrameLoaderClientImpl.cpp:
        (WebKit::FrameLoaderClientImpl::dispatchDidChangeLocationWithinPage):
        Call isLoadingInAPISense, which checks subframes.

2010-03-06  Hironori Bono  <hbono@chromium.org>

        Reviewed by Eric Seidel.

        [Chromium] Typing into Flash with wmode = opaque|transparent and
        non-latin language active outputs as if US keyboard layout active

        https://bugs.webkit.org/show_bug.cgi?id=34936

        This change is a WebKit-side change for this issue. It dispatches
        Char events to plug-ins so plug-ins can receive non-ASCII characters
        as well as ASCII characters.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::keyEvent):

2010-03-06  Kavita Kanetkar  <kkanetkar@chromium.org>

        Reviewed by Darin Fisher.

        Create WebKit API for  WebCore::ImageDecoder
        https://bugs.webkit.org/show_bug.cgi?id=35415

        * WebKit.gyp:
        * public/WebImageDecoder.h: Added.
        * src/WebImageDecoder.cpp: Added.

2010-03-05  John Abd-El-Malek  <jam@chromium.org>

        Reviewed by Darin Fisher.

        Take out code hack that flips the result of NPP_HandleEvent.  This needs to move to
        the NPAPI code so that Pepper plugins don't hit it.