@@ -1,3 +1,13 @@
+2010-03-06  Pavel Feldman  <pfeldman@chromium.org>
+
+        Reviewed by Timothy Hatcher.
+
+        Chromium: Restore devtools window activate upon node search complete.
+
+        https://bugs.webkit.org/show_bug.cgi?id=35832
+
+        * src/js/DevTools.js:
+
 2010-03-06  Darin Fisher  <darin@chromium.org>
 
         Reviewed by David Levin.
